~ implemented support for workspace and bundle based mappings