@@ -1,8 +1,7 @@
-package org.slizaa.neo4j.hierarchicalgraph.ui;
+package org.slizaa.neo4j.hierarchicalgraph.ui.internal;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 
-import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 
@@ -10,7 +9,6 @@ import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.jface.resource.ImageRegistry;
 import org.eclipse.jface.viewers.DecorationOverlayIcon;
 import org.eclipse.swt.graphics.Image;
-import org.slizaa.neo4j.hierarchicalgraph.ui.internal.Activator;
 
 /**
  * <p>
@@ -61,7 +59,7 @@ public class OverlayImageRegistry {
 
     //
     if (overlayPaths == null) {
-      return getImageRegistry().get(basePath);
+      return _imageRegistry.get(basePath);
     }
 
     StringBuilder key = new StringBuilder(basePath);
@@ -71,7 +69,7 @@ public class OverlayImageRegistry {
     }
 
     //
-    ImageDescriptor imageDescriptor = getImageRegistry().getDescriptor(key.toString());
+    ImageDescriptor imageDescriptor = _imageRegistry.getDescriptor(key.toString());
     if (imageDescriptor == null) {
 
       ImageDescriptor[] descriptors = new ImageDescriptor[overlayPaths.length];
@@ -82,11 +80,11 @@ public class OverlayImageRegistry {
       Image baseImage = getImage(basePath);
       checkNotNull(baseImage, basePath);
       imageDescriptor = new DecorationOverlayIcon(baseImage, descriptors);
-      getImageRegistry().put(key.toString(), imageDescriptor);
+      _imageRegistry.put(key.toString(), imageDescriptor);
     }
 
     //
-    return getImageRegistry().get(key.toString());
+    return _imageRegistry.get(key.toString());
   }
 
   /**
@@ -95,11 +93,10 @@ public class OverlayImageRegistry {
    * @return an {@link Image}
    */
   public Image getImage(String path) {
-    final ImageRegistry imageRegistry = getImageRegistry();
-    Image image = imageRegistry.get(path);
+    Image image = _imageRegistry.get(path);
     if (image == null) {
       addImageDescriptor(path);
-      image = imageRegistry.get(path);
+      image = _imageRegistry.get(path);
     }
 
     return image;
@@ -111,61 +108,45 @@ public class OverlayImageRegistry {
    * @return an {@link ImageDescriptor}
    */
   public ImageDescriptor getImageDescriptor(String path) {
-    final ImageRegistry imageRegistry = getImageRegistry();
-    ImageDescriptor imageDescriptor = imageRegistry.getDescriptor(path);
+    ImageDescriptor imageDescriptor = _imageRegistry.getDescriptor(path);
     if (imageDescriptor == null) {
       addImageDescriptor(path);
-      imageDescriptor = imageRegistry.getDescriptor(path);
+      imageDescriptor = _imageRegistry.getDescriptor(path);
     }
 
     return imageDescriptor;
   }
-
-  public URL getImageUrl(String path) {
-    return imageUrl(path);
-  }
-
   /**
    * <p>
    * </p>
    */
   private void addImageDescriptor(String path) {
-    final ImageDescriptor id = ImageDescriptor.createFromURL(getImageUrl(path));
-    getImageRegistry().put(path, id);
+    final ImageDescriptor id = ImageDescriptor.createFromURL(imageUrl(path));
+    _imageRegistry.put(path, id);
   }
 
   private URL imageUrl(String path) {
-
-    if (Activator.getDefault() != null) {
-      final Activator plugin = Activator.getDefault();
-
-      URL entry = plugin.getBundle().getEntry(path);
-      if (entry != null) {
-        return entry;
-      }
-    }
     
     try {
-      return new File(path).toURL();
+      return new URL(path);
     } catch (MalformedURLException e) {
+      e.printStackTrace();
       throw new RuntimeException(e);
     }
-  }
-
-  /**
-   * <p>
-   * </p>
-   *
-   * @return
-   */
-  private ImageRegistry getImageRegistry() {
-
-    //
-    if (_imageRegistry == null) {
-      throw new RuntimeException();
-    }
-
-    // return result
-    return _imageRegistry;
+//
+//    if (Activator.getDefault() != null) {
+//      final Activator plugin = Activator.getDefault();
+//
+//      URL entry = plugin.getBundle().getEntry(path);
+//      if (entry != null) {
+//        return entry;
+//      }
+//    }
+//
+//    try {
+//      return new File(path).toURL();
+//    } catch (MalformedURLException e) {
+//      throw new RuntimeException(e);
+//    }
   }
 }
